# SecureDNS

./: README.md
BlockingPage/: dyndns.php  fpreports.php  index.php
BlockingPage/css/: default.css
BlockingPage/inc/: footer.inc  header.fp.inc  header.inc
BlockingPage/js/: functions.js
BlockingPage/lib/: BlockingContent.php  Bypass.lib.php  Connection.php  DynDNS.lib.php  FPReports.php  Generic.php  Settings.orleans.php  Settings.php  autoexec.php
Client_v1.0/: ScreenDNS_Client.sln
Client_v1.0/AvauntGuard.ScreenDNS.Client.Test/: App.config  AvauntGuard.ScreenDNS.Client.Test.csproj  Program.cs
Client_v1.0/Installer/: Installer.vdproj
Client_v1.0/ScreenDNS_Client/: Program.cs  ScreenDNSService.Designer.cs  ScreenDNSService.cs  ScreenDNSService.resx  ScreenDNSServiceInstaller.Designer.cs  ScreenDNSServiceInstaller.cs  ScreenDNS_Client.csproj  Uninstall.bat
Client_v1.0/ScreenDNS_Client.UI/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  ScreenDNS_Client.UI.csproj
Client_v1.0/ScreenDNS_Client.UI/Components/: GrowLabel.cs
Client_v1.0/ScreenDNS_Client.UI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Client_v1.0/ScreenDNS_Client/Properties/: AssemblyInfo.cs
DNSServer/: CMakeLists.txt  DNSNameserver.cpp  DNSstructure.cpp  MainDNSserver.cpp  monitor.cpp  readP.cpp
DNSServer/config/: MonConf.yaml  config.yaml
DNSServer/include/: DNSList.h  DNSNameserver.h  DNSstructure.h
DNSServer/restartscript/: StartDNS.sh  secdns_startup.sh
DNSServer/tags/v1.0/: MainDNSserver.cpp
DNSServer/tags/v1.0/DNSServer/: readP.cpp
DNSServer/tags/v1.0/DNSServer/include/: ExceptionHandler.h  ServerException.h
DNSServer/tags/v1.0/DNSServer/tags/v1.0/: DNSList.cpp  DNSstructure.cpp  monitor.cpp
DNSServer/tags/v1.0/DNSServer/tags/v1.0/tests/: CMakeLists.txt  config.txt  secdns_startup.sh  thread.cpp
DNSServer/tags/v1.0/DNSServer/tags/v1.0/tests/Backup/: IP2.cdb
DNSServer/tags/v1.0/DNSServer/tests/: manyFork.cpp  map.cpp
DNSServer/tags/v1.0/DNSServer/tests/newtcd/: MainDNSserver.cpp
DNSServer/tags/v1.0/tests/: buildURL.cpp  massquery.sh  testboo.cpp  yamltest.cpp
DNSServer/tags/ver_1.0_CName/: DNSNameserver.cpp  DNSstructure.cpp  MainDNSserver.cpp
DNSServer/tags/ver_1.0_CName/include/: DNSNameserver.h  DNSstructure.h
DNSServer/tags/ver_1.0_CName/tags/v1.0/DNSServer/: DNSNameserver.cpp  ServerLogging.cpp
DNSServer/tags/ver_1.0_CName/tags/v1.0/DNSServer/config/: config.yaml
DNSServer/tags/ver_1.0_CName/tags/v1.0/DNSServer/tags/v1.0/: CMakeLists.txt
DNSServer/tags/ver_1.0_CName/tags/v1.0/DNSServer/tags/v1.0/include/: DNSEntity.h
DNSServer/tags/ver_1.0_CName/tags/v1.0/DNSServer/tags/v1.0/tests/: boosthread.cpp  config.cpp
DNSServer/tags/ver_1.0_CName/tags/v1.0/DNSServer/tags/v1.0/tests/Backup/: whitelist1.cdb
DNSServer/tags/ver_1.0_CName/tags/v1.0/DNSServer/tags/v1.0/tests/newtcd/: DNSNameserver.cpp
DNSServer/tags/ver_1.0_CName/tags/v1.0/DNSServer/tests/: boostlock.cpp  cdbtest.cpp  checkmon.cpp  yamltestBack.cpp
DNSServer/tags/ver_1.0_CName/tags/v1.0/include/: DNSList.h  DNSstructure.h
DNSServer/tags/ver_1.0_CName/tags/v1.0/tests/: readP.cpp  templ.cpp  writeP.cpp
DNSServer/tags/ver_1.0_CName/tags/v1.0/tests/Backup/: MainDNSserver.cpp
DNSServer/tags/ver_1.0_CName/tags/v1.0/tests/config/: public.yaml
DNSServer/tags/ver_1.0_CName/tests/: fork.cpp  server.cpp
DNSServer/tags/ver_1.0_CName/tests/Backup/: DNSNameserver.cpp
DNSServer/tags/ver_1.0_CName/tests/newtcd/: DNSstructure.cpp
DNSServer/tests/: Boostunordered.cpp  client.cpp  massquery.sh  modDnsdump.pl  monitor.cpp
DNSServer/tests/Backup/: child1.cdb
Server_v1.1/test/: BlockAlgo.txt  Bug  NameConvention
Server_v1.1/test/CDB/: CMakeLists.txt  Config.cpp  main.cpp
Server_v1.1/test/CDB/inc/: Config.h
Server_v1.1/test/integration/: CMakeLists.txt  dns_util.cpp  forwarder.cpp  main_server.cpp  server.cpp  test_server.sh
Server_v1.1/test/integration/include/: dns_util.h  forwarder.h  server.h
Server_v1.1/test/parser/: CMakeLists.txt  dns_util.cpp  test_dns_util.cpp
Server_v1.1/test/parser/inc/: dns_util.h
Server_v1.1/test/server/: CMakeLists.txt  Config.cpp  DBManager.cpp  Logger.cpp  Monitor.cpp  Reader.cpp  TestCommand.txt  Transfer.cpp  dns_util.cpp  forwarder - DBUG.cpp  forwarder.cpp  main_server.cpp  server.cpp  test_server.sh
Server_v1.1/test/server/inc/: DBManager.h  Logger.h  Monitor.h  Reader.h  Transfer.h  dns_util.h  forwarder.h  server.h
Server_v1.1/test/test/test_c/: CMakeLists - v1.txt  CMakeLists.txt  config.ini  test_c.cpp  test_kqueue.c  test_overwrite.c  test_parser.cpp  test_size.c
Utilities/AvauntGuard.ISPStatsConsolidator.UI/: AvauntGuard.StatsConsolidator.UI.sln
Utilities/AvauntGuard.ISPStatsConsolidator.UI/AvauntGuard.ISPStatsConsolidator.UI/: App.config  AvauntGuard.ISPStatsConsolidator.UI.csproj  Program.cs
Utilities/AvauntGuard.ISPStatsConsolidator.UI/AvauntGuard.ISPStatsConsolidator.WebUI/: AvauntGuard.ISPStatsConsolidator.WebUI.csproj  Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  Web.config
Utilities/AvauntGuard.ISPStatsConsolidator.UI/AvauntGuard.MalwareDataConsolidator.DataAccess/: AvauntGuard.MalwareDataConsolidator.DataAccess.csproj  DataAccess.cs
Utilities/AvauntGuard.ISPStatsConsolidator.UI/AvauntGuard.MalwareDataConsolidator.UI/: App.config  AvauntGuard.MalwareDataConsolidator.UI.csproj  Program.cs
Utilities/AvauntGuard.ISPStatsConsolidator.UI/Raccoom.Xml/: Raccoom.Xml.csproj
Utilities/AvauntGuard.RBLStatusCodeGenerator/: AvauntGuard.RBLStatusCodeGenerator.sln
Utilities/AvauntGuard.RBLStatusCodeGenerator/AvauntGuard.RBLStatusCodeGenerator.UI/: App.config  Program.cs  (+1 more)
Utilities/AvauntGuard.UnifiedResponseGenerator.UI/: App.config  AvauntGuard.UnifiedResponseGenerator.UI.csproj  Program.cs
Utilities/HTML_Parser/: HTML_Parser.sln
WedAdmin/: WedAdmin.sln
WedAdmin/Core/: Core.csproj
WedAdmin/MemCacheTest/: MemCacheTest.csproj  Program.cs
WedAdmin/Portal/: Global.asax.cs  Portal.csproj  Web.config
WedAdmin/StressTest/: App.config  Program.cs  StressTest.csproj
(+90 files in other folders)
